src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>EmployeeName__c</fullName>
        <label>EmployeeName</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rich_Test__c</fullName>
        <label>Rich Test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TestField__c</fullName>
        <label>Test Field</label>
        <length>42</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>serviceline__c</fullName>
        <description>service line</description>
        <label>serviceline</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <label>test</label>
        <summaryForeignKey>EmployeeMaster__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>test_label__c</fullName>
        <defaultValue>$Label.test_label</defaultValue>
        <label>test label</label>
        <type>TextArea</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EmployeeName__c</columns>
        <columns>serviceline__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Employee ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Rich_Test_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(CONTAINS(Rich_Test__c, &quot;&lt;/img&gt;&quot;))</errorConditionFormula>
        <errorMessage>Please enter some test</errorMessage>
    </validationRules>
</CustomObject>